# ElectroShareGUI

./: CMakeLists.txt  Main.qml  README.md  main.cpp  reciver.cpp  reciver.h  sender.cpp  sender.h
tests/: TestReciver.go  TestSender.go
